--- a/home.html
+++ b/home.html
@@ -40,9 +40,10 @@
 
 
     <main id="publicidad">
+        <div class="image">
+            <img src="https://cdna.artstation.com/p/assets/images/images/015/858/502/original/ari-ibarra-shards.gif?1549941317">
+        </div>
         <h1>Lolas-Shop</h1>
-        <img
-            src="https://cdna.artstation.com/p/assets/images/images/015/858/502/original/ari-ibarra-shards.gif?1549941317">
     </main>
 
     <section id="categorias">
@@ -89,9 +90,9 @@
     </section>
 
     <article id="productos">
-        <section>
+        <section class="container">
+            <h3>Ultimo visto</h3>
             <div class="card">
-                <h3>Ultimo visto</h3>
                 <div class="card-item">
                     <div>
                         <a href="#"><img src="static/img/lolascarne.jpg"></a>
@@ -119,9 +120,9 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section class="container">
+            <h3>Descuentos</h3>
             <div class="card">
-                <h3>Descuentos</h3>
                 <div class="card-item">
                     <div>
                         <a href="#"><img src="static/img/lolascarne.jpg"></a>
@@ -149,9 +150,9 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section class="container">
+            <h3>Popular</h3>
             <div class="card">
-                <h3>Más populares</h3>
                 <div class="card-item">
                     <div>
                         <a href="#"><img src="static/img/lolascarne.jpg"></a>
