--- a/home.html
+++ b/home.html
@@ -55,10 +55,10 @@
           />
         </div>
 
-        <ul class="puntos">
+        <!-- <ul class="puntos">
           <li class="punto"></li>
           <li class="punto"></li>
-        </ul>
+        </ul> -->
       </div>
     </main>
 
@@ -69,37 +69,37 @@
         <a href="#" class="vermas">Ver más</a>
       </div>
       <div class="card">
-        <h3>Electronicos</h3>
+        <h3>Moda</h3>
         <a href=""><img src="static/img/lolascarne.jpg" /></a>
         <a href="#" class="vermas">Ver más</a>
       </div>
       <div class="card">
-        <h3>Electronicos</h3>
+        <h3>Hogar</h3>
         <a href=""><img src="static/img/lolascarne.jpg" /></a>
         <a href="#" class="vermas">Ver más</a>
       </div>
       <div class="card">
-        <h3>Electronicos</h3>
+        <h3>Audio</h3>
         <a href=""><img src="static/img/lolascarne.jpg" /></a>
         <a href="#" class="vermas">Ver más</a>
       </div>
       <div class="card">
-        <h3>Electronicos</h3>
+        <h3>Libros</h3>
         <a href=""><img src="static/img/lolascarne.jpg" /></a>
         <a href="#" class="vermas">Ver más</a>
       </div>
       <div class="card">
-        <h3>Electronicos</h3>
+        <h3>Limpieza</h3>
         <a href=""><img src="static/img/lolascarne.jpg" /></a>
         <a href="#" class="vermas">Ver más</a>
       </div>
       <div class="card">
-        <h3>Electronicos</h3>
+        <h3>Alimentos y Bebidas</h3>
         <a href=""><img src="static/img/lolascarne.jpg" /></a>
         <a href="#" class="vermas">Ver más</a>
       </div>
       <div class="card">
-        <h3>Electronicos</h3>
+        <h3>Cerrajeria</h3>
         <a href=""><img src="static/img/lolascarne.jpg" /></a>
         <a href="#" class="vermas">Ver más</a>
       </div>
@@ -192,7 +192,7 @@
       <div class="footer-items">
         <ul class="footer-menu">
           <li><a href="#">Acerca de</a></li>
-          <li><a href="#">Tu cuenta</a></li>
+          <li><a href="user.html">Tu cuenta</a></li>
           <li><a href="#">Tus compras</a></li>
         </ul>
         <div class="redes">
